--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-    margin: 0 auto;
+    margin:10px auto;
     box-sizing: border-box;
     text-align: center;
 
@@ -102,7 +102,7 @@ h6 {
 #back-to-top {
     position: fixed;
     bottom: 0;
-    right:0;
+    right:30px;
     z-index: 999;
     cursor: pointer;
  }
@@ -126,7 +126,18 @@ h6 {
     }
 }
     
-/* p{
+p{
     margin: 0;
 }
-  */
+.footer{
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+    width: 900px;
+    height: 30px;
+    text-align: center;
+    font-family: 微軟正黑體;
+    color: brown;
+    font-size: 14px;
+}
+ 
